<resources>
    <string name="app_name">My Price Watcher Luis/Tony</string>
    <string name="refreshButtonName">Refresh</string>
    <string name="changeTextViewText">Change: …</string>
    <string name="priceTextViewText">Price: …</string>
    <string name="addedTextView">Added: …</string>
    <string name="listNameTextViewText">My Watch List</string>
    <string name="itemNameTextViewText">Item name</string>
    <string name="launchUrlButtonText">Launch</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new_list">New List</string>
    <string name="choose_list_button_content_description">Choose list</string>
    <string name="filter_list_button_content_description">Filter list</string>
    <string name="sort_list_button_content_description">Sort list</string>
    <string name="action_quit">Quit</string>
    <string name="launch_item_url">Launch item URL</string>
    <string name="action_add_item">Add Item</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="watch_price">Watch Price</string>
    <string name="item_url">Item URL</string>
    <string name="add_new_item">Add New Item</string>
    <string name="name">Name</string>
    <string name="price">Price</string>
    <string name="product_url">Product URL</string>
    <string name="add_item_to_watcher">Add Item To Watcher</string>
    <string name="source_of_product">Source of Product</string>

</resources>