<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddItemFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="726dp"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:text="@string/add_new_item"
            android:textSize="30sp" />

        <EditText
            android:id="@+id/itemSource"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/source_of_product"
            android:inputType="text"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/itemURL"
            android:layout_width="match_parent"
            android:layout_height="61dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/product_url"
            android:inputType="textUri|textPersonName"
            android:textAlignment="center" />

        <Button
            android:id="@+id/button_second"
            android:layout_width="210dp"
            android:layout_height="55dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="#BF616A"
            android:text="@string/add_item_to_watcher" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>